--- a/src/scss/_mixin.scss
+++ b/src/scss/_mixin.scss
@@ -1,8 +1,10 @@
 @mixin font-basic {
     font-family: $arial-helvetica-sans;
-    font-size: 1em;
-    line-height: 1em;
     font-weight: 400;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: 1;
+    letter-spacing: normal;
 }
 
 @mixin anchor__hover--black {
