--- a/src/scss/_reset.scss
+++ b/src/scss/_reset.scss
@@ -26,7 +26,7 @@ p, span {
 hr {
     margin: 20px 0;
     border: 0;
-    border-top: 1px solid $gray-light;
+    border-top: 1px solid $gray;
 }
 
 img {
@@ -78,7 +78,7 @@ form {
         input {
             margin: 0;
             padding: 10px 20px;
-            border: 1px solid $gray-light;
+            border: 1px solid $gray;
             @include font-basic;
         }
     }
