--- a/dest/css/index.css
+++ b/dest/css/index.css
@@ -10,6 +10,7 @@ body {
   line-height: 1;
   letter-spacing: normal;
   color: black;
+  font-size: 0;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -77,13 +78,27 @@ ol li, ul li {
 }
 
 button {
-  padding: 13px 20px;
+  margin: 0 10px 0 0;
+  padding: 10px;
   font-size: .90em;
-  border: initial;
-  border-radius: 5px;
+  border: 1px solid lightskyblue;
+  border-radius: 2px;
   color: white;
   background-color: lightskyblue;
   cursor: pointer;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 400;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1;
+  letter-spacing: normal;
+  font-size: 16px;
+  vertical-align: top;
+}
+
+button:hover {
+  color: lightskyblue;
+  background-color: white;
 }
 
 form fieldset {
@@ -119,4 +134,117 @@ form fieldset input {
   font-style: normal;
   line-height: 1;
   letter-spacing: normal;
+}
+
+body .search {
+  padding: 30px 50px;
+  background-color: lightgray;
+}
+
+body h1 {
+  margin: 0 0 7px;
+  padding: 0;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 400;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1;
+  letter-spacing: normal;
+  font-size: 30px;
+  color: black;
+}
+
+body #input {
+  vertical-align: top;
+  max-width: 500px;
+  width: 30%;
+  margin: 0 10px 0 0;
+  padding: 10px 15px;
+  border: 1px solid #000;
+}
+
+body .output {
+  padding: 20px 50px 50px;
+}
+
+body .list {
+  margin: 0 0 30px;
+}
+
+body .list li {
+  margin: 0 0 40px;
+}
+
+body .list .image {
+  display: inline-block;
+  vertical-align: top;
+  margin: 0 20px 7px 0;
+}
+
+body .list .image .thumbnail {
+  display: block;
+}
+
+body .list .copy {
+  display: inline-block;
+  vertical-align: top;
+  width: 84%;
+}
+
+body .list .copy .title {
+  margin: 0 0 14px;
+  font-size: 20px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 400;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1;
+  letter-spacing: normal;
+}
+
+body .list .copy .description {
+  margin: 0 0 12px;
+  font-size: 16px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 400;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1;
+  letter-spacing: normal;
+}
+
+body .list .tags {
+  font-size: 12px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 400;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1;
+  letter-spacing: normal;
+  line-height: normal;
+}
+
+@media only screen and (max-width: 768px) {
+  body h1 {
+    font-size: 26px;
+  }
+  body #input {
+    display: block;
+    max-width: none;
+    width: 95%;
+    margin-bottom: 10px;
+  }
+  body .list .image {
+    display: block;
+    margin-bottom: 20px;
+  }
+  body .list .image .thumbnail {
+    max-width: 320px;
+    width: 100%;
+    margin: 0 auto;
+  }
+  body .list .copy {
+    display: block;
+    width: 100%;
+  }
 }
