Setting styling for the Loading status and Error Message.

--- a/src/scss/_styles--default.scss
+++ b/src/scss/_styles--default.scss
@@ -62,6 +62,15 @@ body {
             line-height: normal;
         }
     }
+    .status {
+        
+    }
+    .warning {
+
+    }
+    .error {
+        color: $red;
+    }
     .pagination {
         button {
             
