--- a/src/scss/_styles--media-queries.scss
+++ b/src/scss/_styles--media-queries.scss
@@ -45,6 +45,15 @@
             .tags {
             }
         }
+        .status {
+        
+        }
+        .warning {
+    
+        }
+        .error {
+            color: $red;
+        }
         .pagination {
             button {
                 
