--- a/src/scss/_reset.scss
+++ b/src/scss/_reset.scss
@@ -19,9 +19,10 @@ h1, h2, h3, h4, h5, h6 {
 p, span {
     margin: 0;
     padding: 0;
-    color: $black;
     vertical-align: top;
     @include font-basic;
+    font-size: 16px;
+    color: $black;
 }
 
 hr {
