--- a/dest/css/index.css
+++ b/dest/css/index.css
@@ -180,16 +180,20 @@ body .list .image {
   display: inline-block;
   vertical-align: top;
   margin: 0 20px 7px 0;
+  width: 16%;
 }
 
 body .list .image .thumbnail {
   display: block;
+  max-width: 480px;
+  width: 100%;
+  height: auto;
 }
 
 body .list .copy {
   display: inline-block;
   vertical-align: top;
-  width: 84%;
+  width: 80%;
 }
 
 body .list .copy .title {
@@ -239,12 +243,15 @@ body .error {
     width: 95%;
     margin-bottom: 10px;
   }
+  body .output {
+    padding: 20px 14px 50px;
+  }
   body .list .image {
     display: block;
-    margin-bottom: 20px;
+    width: 100%;
+    margin: 0 auto 20px;
   }
   body .list .image .thumbnail {
-    max-width: 320px;
     width: 100%;
     margin: 0 auto;
   }
